AC_INIT(amdgpu-dkms, 19.40)

m4_include([m4/kernel.m4])
m4_include([m4/kobj-to-dev.m4])
m4_include([m4/drm-modeset-lock-all-ctx.m4])
m4_include([m4/drm-atomic-helper-disable-all.m4])
m4_include([m4/drm-atomic-helper-duplicate-state.m4])
m4_include([m4/drm-atomic-helper-suspend.m4])
m4_include([m4/drm-atomic-helper-resume.m4])
m4_include([m4/drm-crtc-force-disable-all.m4])
m4_include([m4/drm_audio_component_header.m4])
m4_include([m4/remove-conflicting-framebuffers.m4])
m4_include([m4/drm-fb-helper-remove-conflicting-framebuffers.m4])
m4_include([m4/drm-encoder-init-valid-with-name.m4])
m4_include([m4/drm-crtc-init-with-planes-valid-with-name.m4])
m4_include([m4/drm-universal-plane-init.m4])
m4_include([m4/drm-gem-object-lookup.m4])
m4_include([m4/in-compat-syscall.m4])
m4_include([m4/drm-get-format-name.m4])
m4_include([m4/set-crc-source.m4])
m4_include([m4/drm-gem-object-ref.m4])
m4_include([m4/rename-fence-to-dma-fence.m4])
m4_include([m4/fence-array-h.m4])
m4_include([m4/timer-setup.m4])
m4_include([m4/dma-fence-set-error.m4])
m4_include([m4/pcie-bandwidth-available.m4])
m4_include([m4/drm-fb-helper-remove-conflicting-pci-framebuffers.m4])
m4_include([m4/pcie-get-speed-width-cap.m4])
m4_include([m4/pcie-enable-atomic-ops-to-root.m4])
m4_include([m4/pci-is-thunderbolt-attached.m4])
m4_include([m4/pci-pcie-type.m4])
m4_include([m4/pci-upstream-bridge.m4])
m4_include([m4/drm-is-current-master.m4])
m4_include([m4/reservation-object-wait-timeout-rcu.m4])
m4_include([m4/reservation-object-lock.m4])
m4_include([m4/reservation-object-trylock.m4])
m4_include([m4/reservation-object-test-signaled-rcu.m4])
m4_include([m4/request-firmware-direct.m4])
m4_include([m4/hwmon-device-register-with-groups.m4])
m4_include([m4/mmu-notifier-call-srcu.m4])
m4_include([m4/file-inode.m4])
m4_include([m4/drm-get-max-iomem.m4])
m4_include([m4/mm-release-pages.m4])
m4_include([m4/sched-list-for-each-entry.m4])
m4_include([m4/memremap-devm-memremap-pages.m4])
m4_include([m4/ktime-set.m4])
m4_include([m4/invalidate-range-start.m4])
m4_include([m4/drm-syncobj-fence-get.m4])
m4_include([m4/mm-interval-tree-define.m4])
m4_include([m4/reservation-object-copy-fences.m4])
m4_include([m4/reservation-object-add-shared-fence.m4])
m4_include([m4/list-bulk-move-tail.m4])
m4_include([m4/drm-syncobj-find-fence.m4])
m4_include([m4/drm-free-large.m4])
m4_include([m4/drm-calloc-large.m4])
m4_include([m4/mm-register-shrinker.m4])
m4_include([m4/irq-domain.m4])
m4_include([m4/invalidate-range-end.m4])
m4_include([m4/zone-managed-pages.m4])
m4_include([m4/access-ok.m4])
m4_include([m4/bin-attrs-in-attribute-group.m4])
m4_include([m4/ptrace-parent.m4])
m4_include([m4/destroy-work-on-stack.m4])
m4_include([m4/system-highpri-wq.m4])
m4_include([m4/alloc-ordered-workqueue.m4])
m4_include([m4/wq-highpri.m4])
m4_include([m4/managed-pages-in-struct-zone.m4])
m4_include([m4/strscpy.m4])
m4_include([m4/drm-printer.m4])
m4_include([m4/drm-debug-printer.m4])
m4_include([m4/dev-pm-set-driver-flags.m4])
m4_include([m4/drm-send-event-locked.m4])
m4_include([m4/drm-color-lut-size.m4])
m4_include([m4/bpf-cgroup-run-prog-device-cgroup.m4])
m4_include([m4/arch-io-reserve-free-memtype-wc.m4])
m4_include([m4/kref-read.m4])
m4_include([m4/vm-mm-in-vm-area-struct.m4])
m4_include([m4/virtual-mm-fault-function.m4])
m4_include([m4/pfn_to_pfn_t.m4])
m4_include([m4/get-user-pages.m4])
m4_include([m4/get-user-pages-remote.m4])
m4_include([m4/memalloc-nofs-save.m4])
m4_include([m4/kvzalloc-kvmalloc.m4])
m4_include([m4/kvfree.m4])
m4_include([m4/kvmalloc-array.m4])
m4_include([m4/kvcalloc.m4])
m4_include([m4/vmf-insert.m4])
m4_include([m4/drm-atomic-get-crtc-state.m4])
m4_include([m4/drm-atomic-get-new-plane-state.m4])
m4_include([m4/drm-atomic-helper-connector-reset.m4])
m4_include([m4/drm-encoder-find-valid-with-file.m4])
m4_include([m4/drm-atomic-helper-best-encoder.m4])
m4_include([m4/drm-hdmi-avi-infoframe-from-display-mode.m4])
m4_include([m4/drm-set-crc-source.m4])
m4_include([m4/drm-dp-cec-correlation-functions.m4])
m4_include([m4/drm-connector-put.m4])
m4_include([m4/drm-vma-node-verify-access.m4])
m4_include([m4/overflow-h.m4])
m4_include([m4/drm-gem-map-attach.m4])
m4_include([m4/reservation-object-reserve-shared.m4])
m4_include([m4/drm-amdgpu-fence-to-handle.m4])
m4_include([m4/dma-fence-get-stub.m4])
m4_include([m4/chunk-id-synobj-in-out.m4])
m4_include([m4/chunk-id-scheduled-dependencies.m4])
m4_include([m4/chunk-id-syncobj-timeline-wait-signal.m4])
m4_include([m4/drm-driver-unload.m4])
m4_include([m4/get-scanout-position.m4])
m4_include([m4/vga-switcheroo-set-dynamic-switch.m4])
m4_include([m4/vga-switcheroo-register-handler.m4])
m4_include([m4/vga-switcheroo-handler-get-client-id.m4])
m4_include([m4/vga-switcheroo-register-client.m4])
m4_include([m4/use-unsigned-pipe.m4])
m4_include([m4/drm-fb-helper-lastclose.m4])
m4_include([m4/pm-genpd-remove-device.m4])
m4_include([m4/si-mem-available.m4])
m4_include([m4/mmgrab.m4])
m4_include([m4/set-busid.m4])
m4_include([m4/mm-h.m4])
m4_include([m4/signal-h.m4])
m4_include([m4/task-h.m4])
m4_include([m4/uapi-linux-sched-types-h.m4])
m4_include([m4/linux-nospec-h.m4])
m4_include([m4/drm-driver-gem-free-object-unlocked.m4])
m4_include([m4/drm-mm-insert-mode.m4])
m4_include([m4/drm-dp-mst-connector-late-register.m4])
m4_include([m4/drm-dp-mst-connector-early-unregister.m4])
m4_include([m4/amd-iommu-pc-supported.m4])
m4_include([m4/drm-dev-put.m4])
m4_include([m4/hash-for-each-possible.m4])
m4_include([m4/hash-for-each-possible-rcu.m4])
m4_include([m4/hash-for-each-rcu.m4])
m4_include([m4/hash-for-each-safe.m4])
m4_include([m4/mm-access.m4])
m4_include([m4/drm-atomic-state-async-update.m4])
m4_include([m4/drm-mm-print.m4])
m4_include([m4/drm-framebuffer-format.m4])
m4_include([m4/config.m4])


AC_LANG(C)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS([config/config.h])
AC_PROG_INSTALL
AC_PROG_CC

AC_AMDGPU_CONFIG

AC_OUTPUT
