AC_INIT(amdgpu-dkms, 19.40)

m4_include([m4/kernel.m4])
m4_include([m4/kallsyms-lookup-name.m4])
m4_include([m4/mmu-notifier-call-srcu.m4])
m4_include([m4/in-compat-syscall.m4])
m4_include([m4/kobj-to-dev.m4])
m4_include([m4/devcgroup-check-permission.m4])
m4_include([m4/drm-encoder-find-valid-with-file.m4])
m4_include([m4/drm-atomic-helper-best-encoder.m4])
m4_include([m4/drm-edid-to-eld.m4])
m4_include([m4/drm-cache.m4])
m4_include([m4/drm-connector-put.m4])
m4_include([m4/drm-connector-for-each-possible-encoder.m4])
m4_include([m4/drm-connector-update-edid-property.m4])
m4_include([m4/drm-connector-attach-encoder.m4])
m4_include([m4/drm-connector-set-path-property.m4])
m4_include([m4/drm-dp-cec-correlation-functions.m4])
m4_include([m4/drm-modeset-lock-all-ctx.m4])
m4_include([m4/drm-atomic-helper-disable-all.m4])
m4_include([m4/drm-atomic-helper-duplicate-state.m4])
m4_include([m4/drm-atomic-helper-suspend-resume.m4])
m4_include([m4/drm-crtc-force-disable-all.m4])
m4_include([m4/drm-fb-helper-remove-conflicting-pci-framebuffers.m4])
m4_include([m4/drm-encoder-init-valid-with-name.m4])
m4_include([m4/drm-crtc-init-with-planes-valid-with-name.m4])
m4_include([m4/drm-universal-plane-init.m4])
m4_include([m4/drm-get-format-name.m4])
m4_include([m4/drm-gem-object-ref.m4])
m4_include([m4/drm-is-current-master.m4])
m4_include([m4/drm-atomic-helper-connector-reset.m4])
m4_include([m4/drm-get-max-iomem.m4])
m4_include([m4/chunk-id-synobj-in-out.m4])
m4_include([m4/chunk-id-scheduled-dependencies.m4])
m4_include([m4/chunk-id-syncobj-timeline-wait-signal.m4])
m4_include([m4/drm-syncobj-find-fence.m4])
m4_include([m4/drm-send-event-locked.m4])
m4_include([m4/drm-color-lut-size.m4])
m4_include([m4/drm-atomic-get-crtc-state.m4])
m4_include([m4/drm-atomic-get-new-plane-state.m4])
m4_include([m4/drm-fb-helper-fill-info.m4])
m4_include([m4/drm-dev-put.m4])
m4_include([m4/get-scanout-position-in-struct-drm-driver.m4])
m4_include([m4/get-vblank-timestamp-in-struct-drm-driver.m4])
m4_include([m4/drm-calc-vbltimestamp-from-scanoutpos.m4])
m4_include([m4/drm-mm-print.m4])
m4_include([m4/drm-debug-printer.m4])
m4_include([m4/drm-fb-helper-cfb-xx.m4])
m4_include([m4/fb-info-apertures.m4])
m4_include([m4/drm-fb-helper-xx-fbi.m4])
m4_include([m4/drm-fb-helper-set-suspend-unlocked.m4])
m4_include([m4/drm-atomic-state-plane-states.m4])
m4_include([m4/drm-atomic-helper-update-legacy-modeset-state.m4])
m4_include([m4/drm-crtc-accurate-vblank-count.m4])
m4_include([m4/drm_mode_is_420_xxx.m4])
m4_include([m4/fb-ops-fb-debug-xx.m4])
m4_include([m4/drm-vma-node-verify-access.m4])
m4_include([m4/dma-fence-headers.m4])
m4_include([m4/dma-fence-set-error.m4])
m4_include([m4/request-firmware-direct.m4])
m4_include([m4/kmap-atomic.m4])
m4_include([m4/hwmon-device-register-with-groups.m4])
m4_include([m4/arch-io-reserve-free-memtype-wc.m4])
m4_include([m4/kref-read.m4])
m4_include([m4/kthread-park-xx.m4])
m4_include([m4/__kthread-should-park.m4])
m4_include([m4/list-bulk-move-tail.m4])
m4_include([m4/drm-calloc-large.m4])
m4_include([m4/drm-free-large.m4])
m4_include([m4/drm-malloc-ab.m4])
m4_include([m4/kvcalloc.m4])
m4_include([m4/kvfree.m4])
m4_include([m4/kvmalloc-array.m4])
m4_include([m4/kvzalloc-kvmalloc.m4])
m4_include([m4/mm-access.m4])
m4_include([m4/memalloc-nofs-save.m4])
m4_include([m4/mmgrab.m4])
m4_include([m4/get-user-pages.m4])
m4_include([m4/get-user-pages-remote.m4])
m4_include([m4/vmf-insert.m4])
m4_include([m4/mmu-notifier.m4])
m4_include([m4/mm-release-pages.m4])
m4_include([m4/pcie-get-speed-width-cap.m4])
m4_include([m4/pcie-enable-atomic-ops-to-root.m4])
m4_include([m4/pci-upstream-bridge.m4])
m4_include([m4/pcie-bandwidth-available.m4])
m4_include([m4/pci-dev-id.m4])
m4_include([m4/perf-event-update-userpage.m4])
m4_include([m4/ptrace-parent.m4])
m4_include([m4/mm-register-shrinker.m4])
m4_include([m4/ksys_sync_helper.m4])
m4_include([m4/ktime-get-raw-ns.m4])
m4_include([m4/ktime-get-boottime-ns.m4])
m4_include([m4/ktime-get-real-seconds.m4])
m4_include([m4/access-ok.m4])
m4_include([m4/vga-switcheroo-set-dynamic-switch.m4])
m4_include([m4/vga-switcheroo-register-handler.m4])
m4_include([m4/vga-switcheroo-handler-get-client-id.m4])
m4_include([m4/vga-switcheroo-register-client.m4])
m4_include([m4/sched-list-for-each-entry.m4])
m4_include([m4/system-highpri-wq.m4])
m4_include([m4/drm-framebuffer-format.m4])
m4_include([m4/timer-setup.m4])
m4_include([m4/pci-is-thunderbolt-attached.m4])
m4_include([m4/pci-pcie-type.m4])
m4_include([m4/dma-fence-get-stub.m4])
m4_include([m4/invalidate-range-start.m4])
m4_include([m4/irq-domain.m4])
m4_include([m4/zone-managed-pages.m4])
m4_include([m4/struct-attribute-group.m4])
m4_include([m4/strscpy.m4])
m4_include([m4/dev-pm-set-driver-flags.m4])
m4_include([m4/alloc-ordered-workqueue.m4])
m4_include([m4/pm-genpd-remove-device.m4])
m4_include([m4/si-mem-available.m4])
m4_include([m4/drm-driver-gem-free-object-unlocked.m4])
m4_include([m4/wq-highpri.m4])
m4_include([m4/type--poll-t.m4])
m4_include([m4/hw-perf-event-conf-member.m4])
m4_include([m4/interval-tree-insert.m4])
m4_include([m4/seq-hex-dump.m4])
m4_include([m4/idr-remove.m4])
m4_include([m4/i2c-lock-operations-struct.m4])
m4_include([m4/down-write-killable.m4])
m4_include([m4/backlight-device-register.m4])
m4_include([m4/backlight-properties-type.m4])
m4_include([m4/iommu-get-domain-for-dev.m4])
m4_include([m4/virtual-mm-fault-function.m4])
m4_include([m4/vm-fault-address-vma.m4])
m4_include([m4/hlist-for-each-entry.m4])
m4_include([m4/hash-for-each-xxx.m4])
m4_include([m4/amd-iommu-pc-supported.m4])
m4_include([m4/memremap-devm-memremap-pages.m4])
m4_include([m4/drm-audio-component-header.m4])
m4_include([m4/drm-set-crc-source.m4])
m4_include([m4/drm-driver-unload.m4])
m4_include([m4/drm-device-driver-features.m4])
m4_include([m4/drm-driver-feature.m4])
m4_include([m4/drm-dev-unplug.m4])
m4_include([m4/drm-dp-mst-atomic-check.m4])
m4_include([m4/drm-dp-mst-atomic-enable-dsc.m4])
m4_include([m4/drm-dp-mst-add-affected-dsc-crtcs.m4])
m4_include([m4/drm-atomic-helper-shutdown.m4])
m4_include([m4/drm-dp-mst-topology.m4])
m4_include([m4/drm-edid.m4])
m4_include([m4/drm-hdmi-vendor-infoframe-from-display-mode.m4])
m4_include([m4/drm-dp-mst-topology-cbs.m4])
m4_include([m4/drm-atomic.m4])
m4_include([m4/drm-fb-helper-lastclose.m4])
m4_include([m4/set-busid.m4])
m4_include([m4/drm-mm-insert-mode.m4])
m4_include([m4/drm-atomic-state-async-update.m4])
m4_include([m4/drm-atomic-nonblocking-commit.m4])
m4_include([m4/drm-atomic-state-put.m4])
m4_include([m4/drm-device-filelist-mutex.m4])
m4_include([m4/drm-connector-list-iter-begin.m4])
m4_include([m4/drm-display-info.m4])
m4_include([m4/struct-name-cb-name-2args.m4])
m4_include([m4/drm-drv-gem-prime-export.m4])
m4_include([m4/dma-resv.m4])
m4_include([m4/mmu-notifier-synchronize.m4])
m4_include([m4/drm-connector-init-with-ddc.m4])
m4_include([m4/ttm_buffer_object.m4])
m4_include([m4/drm-dp-mst-topology-mgr-resume.m4])
m4_include([m4/drm-dp-mst-detect-port.m4])
m4_include([m4/dma-buf.m4])
m4_include([m4/drm-crtc-state.m4])
m4_include([m4/drm-gem-object-lookup.m4])
m4_include([m4/drm-crtc-helper.m4])
m4_include([m4/drm-amdgpu-fence-to-handle.m4])
m4_include([m4/drm-driver-gem-prime-res-obj.m4])
m4_include([m4/drm-gem-map-attach.m4])
m4_include([m4/drm-get-format-info.m4])
m4_include([m4/linux-headers.m4])
m4_include([m4/drm-headers.m4])
m4_include([m4/drm-connector-funcs-register-member.m4])
m4_include([m4/drm-dp-mst-dsc-aux-for-port.m4])
m4_include([m4/drm-dp-calc-pbn-mode.m4])
m4_include([m4/drm-dp-atomic-find-vcpi-slots.m4])
m4_include([m4/config.m4])


AC_LANG(C)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS([config/config.h])
AC_PROG_INSTALL
AC_PROG_CC

AC_AMDGPU_CONFIG

AC_OUTPUT
